# openai-cli

./: .gitignore  Cargo.toml  cargo.toml
.github/workflows/: main.yml
openai-api/: Cargo.toml
openai-api/src/: error.rs  lib.rs
openai-api/src/model/: create_chat.rs  create_completion.rs  create_edit.rs  create_embedding.rs  create_image.rs  function.rs  list_files.rs  list_models.rs  mod.rs  model.rs  object.rs
openai-cli/: Cargo.toml
openai-cli/src/: main.rs
openai-cli/src/presentation/: chat.rs  command.rs  completion.rs  edit.rs  embedding.rs  file.rs  image.rs  mod.rs  model.rs
