[package]
name = "openai-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
base64 = "0.21.2"
console = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"
openai-api = { path = "../openai-api" }
reqwest = "0.11.18"
serde_json = "1.0.96"
structopt = "0.3.26"
tokio = { version = "1.28.1", features = ["full"] }
